<resources>
    <string name="app_name">Dolar al Dia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Precio Dolar</string>
    <string name="nav_header_subtitle">Info Contacto 04243454032</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Compartir</string>
    <string name="menu_inicio">Dolar al Dia</string>
    <string name="menu_monedas">Otras Paginas</string>
    <string name="menu_euro">Precio Euro</string>
    <string name="menu_Bancos">Precio en Bancos</string>
    <string name="menu_Euros">Precio del Euro</string>
    <string name="labelDolar">Dolares</string>
    <string name="labelBolivares">Bolivares</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">3241868982780008</string>
    <string name="texto_largo_con_formato">
        <![CDATA[
        <b>¡Bienvenido a Dolar al Dia!</b><br><br>

        Esta aplicación está diseñada para mantenerte informado sobre las tasas de cambio del dólar en Venezuela. Nuestra misión es proporcionarte información actualizada y precisa sobre los precios del dólar tanto en páginas web como en bancos nacionales.<br><br>

        <b>Características Principales:</b><br><br>
        <ul>
            <li>Monitoreo Continuo: Mantente al tanto de las fluctuaciones del dólar con actualizaciones en tiempo real desde diversas fuentes confiables.</li>
            <li>Información Bancaria: Obtén tasas de cambio específicas de los principales bancos nacionales para tomar decisiones informadas.</li>
            <li>Conversión Rápida: Convierte fácilmente entre dólares y bolívares con una interfaz intuitiva y rápida.</li>
            <li>Histórico de Precios: Explora el historial de los precios del dólar para comprender mejor las tendencias.</li>
        </ul><br>

        <b>Desarrollador:</b><br><br>
        Desoftsis<br>
      <br>

        <b>Contáctanos:</b><br><br>
        ¡Valoramos tus comentarios! Si tienes sugerencias, preguntas o simplemente quieres saludar, no dudes en ponerte en contacto con nosotros. <br><br>
         email: desoftsis@gmail.com


        ]]>
    </string>
    <string name="tasa_bcv">Tasa BCV</string>
    <string name="tasa_paralelo">Tasa Paralelo</string>
    <string name="tasa_euro">Tasa Euro</string>
    <string name="actualizacion">Act. BCV:</string>
    <string name="fecha_actualizacion">Actualizacion</string>
    <string name="actualizacionPara">Act. Paralelo:</string>
    <string name="precio_en_bs">Precio en Bs</string>
    <string name="paginas_a_buscar">Paginas a Buscar</string>
    <string name="paginas">Paginas</string>
    <string name="bancos">Bancos</string>
    <string name="precio_en_paginas">Precio en Paginas</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="calificar">Calificar</string>
    <string name="nombre_del_banco">Nombre</string>
    <string name="ver_un_video_para_colaborar">Apoyame viendo un vídeo</string>
    <string name="banner_ad_prueba">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_ejecucion"> ca-app-pub-5303101028880067/3567978792</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="splash_activity_image_text">Dolar Al Dia</string>
    <string name="splash_activity_text">Dolar Al Dia</string>
    <string name="dif">Dif</string>
    <string name="dif_bs">Dif. Bs</string>
    <string name="dif_dolar">Dif. en $</string>
    <string name="mensaje_dolar">Dif. Dolar Vs Euro.</string>
    <string name="mensaje_paralelo">Dif. Dolar Vs Euro.</string>
    <string name="tool_diferencia">Diferencia entre las Monedas</string>
    <string name="desea_enviar_datos_de_su_pago_movil">Enviar datos de su pago Movil?</string>
    <string name="info_de_cuentas">Info de Cuentas</string>
    <string name="pago_movil_message">Ahora presionando el siguiente %1$s: puede guardar tus números de pagos móvil para enviarlo con mayor rapidez a la hora de solicitar algún pago</string>
    <string name="sin_cuenta_seleccionada">Sin Cuenta guardada</string>
    <string name="sin_imagen_personalizada">Sin Imagen Personalizada</string>
    <string name="imagen_personalizada">Enviar Imagen Personalizada</string>
    <string name="historia_del_dolar">Historia del Dolar</string>
    <string name="clic_grafico">Haz Click en el Grafico para ver los Valores</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="activar_notificaciones">Activar Notificaciones</string>
    <string name="notificaciones">Configuración de Notificaciones</string>
    <string name="frgm_payment_msg_thanks">¡Gracias por tu compra!</string>
    <string name="frgm_payment_price">Total a Pagar: $%.2f USD</string>
    <string name="fecha_vencimiento">Fecha Venc: %s</string>
    <string name="frgm_payment_title">Suscripcion</string>
    <string name="suscripcion">Suscripcion</string>
    <string name="paypal">Paypal</string>
    <string name="pago_movil">Pago Movil</string>
    <string name="acerca">Acerca...</string>
    <string name="notificaciones_label">Notificaciones</string>
    <string name="historia_del_dolar_label">Historia del Dolar</string>
    <string name="prox_act_dolar_bcv">"Prox. Act. Bcv"</string>
    <string name="recibir_notificaciones">Recibir Notificaciones</string>
    <string name="imagen_personal">Imagen personal</string>
    <string name="datos_pago_movil">Datos Pago Movil</string>
    <string name="monto_personalizado">Monto Personalizado</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="zelle">Zelle</string>
    <string name="logo_de_la_persona">Logo de la persona</string>
    <string name="transferencia">Transferencia</string>
    <string name="cedula_o_rif">Cedula o Rif</string>
    <string name="alias">Alias</string>
    <string name="telefono">Telefono</string>
    <string name="salir">Salir</string>
    <string name="historia_del_dolar_bcv">Historia del Dólar BCV</string>
    <string name="historia_de_dolar_en_venezuela">Historia del Dolar en Venezuela</string>
    <string name="precio_en_plataformas">Plataformas</string>
    <string name="actualizar_tasas">Actualizar tasas</string>
    <string name="banco_a_buscar">Banco a Buscar</string>
    <string name="configuracion">Configuracion</string>
    <string-array name="lista_bancos">
        <item>Seleccione el Banco</item>
        <item>0134 - Banesco</item>
        <item>0102 - Banco de Venezuela</item>
        <item>0108 - Banco Provincial</item>
        <item>0114 - Bancaribe</item>
        <item>0105 - Banco Mercantil</item>
        <item>0163 - Banco del Tesoro</item>
        <item>0175 - Banco Bicentenario</item>
        <item>0191 - Banco Nacional de Crédito (BNC)</item>
        <item>0172 - Bancamiga</item>
        <item>0171 - Banco Activo</item>
        <item>0115 - Banco Exterior</item>
        <item>0151 - Banco Fondo Comun</item>
        <item>0138 - Banco Plaza</item>
        <item>0104 - Banco Venezola de Credito</item>

    </string-array>
    <string-array name="lista_history">
        <item>Ultimos 7 Dias</item>
        <item>Ultimos 30 Dias</item>

    </string-array>
    <string-array name="lista_letras">
        <item>V</item>
        <item>P</item>
        <item>E</item>
        <item>J</item>
        <item>G</item>
    </string-array>
    <string name="premium_dialog_title">¡Navega sin publicidad desde 1.5$!</string>
    <string name="premium_dialog_message_v3">Puedes pagar con Pago Móvil para activar la versión Premium.</string>
    <string name="premium_dialog_positive_button">Ver Datos de Pago</string>
    <string name="premium_dialog_negative_button">Más tarde</string>
    <string name="payment_details_full">Para activar la versión Premium, realiza un Pago Móvil con los siguientes datos y envía el comprobante a nuestro correo electrónico.\n\n• Teléfono: 0412-1234567\n• CI: 12.345.678\n• Banco: Nombre del Banco\n\nEmail: soporte@dolaraldia.com</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="rif_banco">J5068188172</string>
    <string name="verificar_pago_m_vil">Verificar Pago Móvil</string>
    <string name="ingresa_los_datos_de_la_transacci_n_para_validarla">Ingresa los datos de la transacción para validarla.</string>
    <string name="tel_fono_del_cliente">Teléfono del cliente</string>
</resources>