<?xml version="1.0" encoding="utf-8"?>


<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.carlosv.dolaraldia.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" >

        <!-- ... aquí pueden estar tus otras acciones ... -->

        <!-- ¡NUEVA ACCIÓN! Para ir desde Home al estado Premium -->
        <action
            android:id="@+id/action_nav_home_to_premiumStatusFragment"
            app:destination="@id/nav_premium_status"
          /> <!-- Animación opcional -->

    </fragment>


    <dialog
        android:id="@+id/nav_more"
        android:name="com.carlosv.dolaraldia.utils.MoreOptionsBottomSheetFragment"
        android:label="Más Opciones"
        tools:layout="@layout/fragment_more_options" />


    <fragment
        android:id="@+id/nav_platforms"
        android:name="com.carlosv.dolaraldia.ui.platforms.PlatformRatesFragment"
        android:label="@string/precio_en_plataformas"
        tools:layout="@layout/fragment_platform_rates">
    <!-- Definimos un argumento que este fragmento puede recibir -->
    <argument
        android:name="noticiaId"
        app:argType="string" />

    <!-- ¡AQUÍ ESTÁ LA MAGIA DEL DEEP LINK! -->
    <!-- Definimos una URI única para este destino. -->
    <deepLink
        android:id="@+id/deepLinkDetalleNoticia"
        app:uri="dolaraldia://noticia/{noticiaId}" />
    </fragment>


    <fragment
        android:id="@+id/nav_Euros"
        android:name="com.carlosv.dolaraldia.ui.acerca.EuroFragment"
        android:label="@string/menu_Euros"
        tools:layout="@layout/fragment_paginas" />

    <fragment
        android:id="@+id/nav_bancos"
        android:name="com.carlosv.dolaraldia.ui.bancos.BancosFragment"
        android:label="@string/menu_Bancos"
        tools:layout="@layout/fragment_bancos">

        <!-- ¡AQUÍ AÑADIMOS EL DEEP LINK! -->
        <!-- Definimos una URI única para este destino.
             Puedes usar cualquier nombre, pero debe ser coherente. -->
        <deepLink
            android:id="@+id/deepLinkBancos"
            app:uri="dolaraldia://fragment/bancos" />

    </fragment>


    <fragment
        android:id="@+id/nav_acerca"
        android:name="com.carlosv.dolaraldia.ui.acerca.AcercaFragment"
        android:label="@string/acerca"
        tools:layout="@layout/fragment_acerca" />

    <fragment
        android:id="@+id/nav_Personal"
        android:name="com.carlosv.dolaraldia.ui.home.DatosPerFragment"
        android:label="@string/pago_movil"
        tools:layout="@layout/fragment_datos_per" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.carlosv.dolaraldia.ui.historial.HistoryFragment"
        android:label="@string/historia_del_dolar_label"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_configuration"
        android:name="com.carlosv.dolaraldia.ui.configuracion.ConfiguracionFragment"
        android:label="Configuracion"
        tools:layout="@layout/fragment_configuration" />
    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.carlosv.dolaraldia.ui.contacto.ContactBottomSheetFragment"
        android:label="Contacto"
        tools:layout="@layout/layout_bottom_sheet_contacto" />
    <fragment
        android:id="@+id/nav_pago"
        android:name="com.carlosv.dolaraldia.ui.pago.PagoFragment"
        android:label="@string/suscripcion"
        tools:layout="@layout/fragment_pago"/>
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.carlosv.dolaraldia.ui.pago.PaymentFragment"
        android:label="@string/paypal"
        tools:layout="@layout/fragment_payment"/>

    <fragment
        android:id="@+id/nav_guardar_noti"
        android:name="com.carlosv.dolaraldia.ui.notificaciones.FragmentGuardarNotifications"
        android:label="Notificaciones"
        tools:layout="@layout/fragment_guardar_notifications"/>

    <!-- ==========> AÑADE ESTE BLOQUE <========== -->
    <fragment
        android:id="@+id/nav_debug_premium"
        android:name="com.carlosv.dolaraldia.ui.debug.DebugPremiumFragment"
        android:label="Debug Premium"
        tools:layout="@layout/fragment_debug_premium" />

    <fragment
        android:id="@+id/nav_premium_status"
        android:name="com.carlosv.dolaraldia.ui.pago.PremiumStatusFragment"
        android:label="Mi Suscripción"
        tools:layout="@layout/fragment_premium_status" />

    <!--

    <fragment
        android:id="@+id/nav_purchase_premium"
        android:name="com.carlosv.dolaraldia.ui.pago.PremiumOptionsBottomSheet"
        android:label="Opcion Suscripcion"
        tools:layout="@layout/fragment_premium_status" />

-->

   </navigation>